--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId 'com.creativefunapps.tileschallenge'
         minSdkVersion 14
         targetSdkVersion 20
-        versionCode 9
-        versionName '1.3'
+        versionCode 10
+        versionName '2.0'
         signingConfig signingConfigs.config
     }
     buildTypes {
@@ -36,4 +36,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.google.android.gms:play-services:6.1.71'
+    compile project(':libraries:BaseGameUtils')
 }
